# truverse_agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/agent/: graph.py  multimodal.py  prompts.py  tools.py
app/agent/tools/: __init__.py  analytics_tools.py  base.py  clickhouse_tools.py  image_tools.py  search_tools.py
app/context/: viking.py
app/skills/: __init__.py  manager.py
data/viking/vectordb/context/: collection_meta.json
data/viking/vectordb/context/index/default/: index_meta.json
data/viking/vectordb/context/store/: 000028.ldb  LOG  LOG.old  MANIFEST-000025
data/viking/viking/default/resources/context/: .overview.md
data/viking/viking/default/resources/context/京东电商_ClickHouse_数据库表结构/: .overview.md
data/viking/viking/default/resources/context_1/京东电商_ClickHouse_数据库表结构/: 2_jd_shopId_comments_京东商品评_2more.md
data/viking/viking/default/resources/context_2/: .abstract.md  .overview.md
data/viking/viking/default/resources/context_4/: .abstract.md  .overview.md
data/viking/viking/default/resources/context_5/: .abstract.md  .overview.md
data/viking/viking/default/resources/context_6/: .abstract.md  .overview.md
data/viking/viking/default/resources/context_7/: .abstract.md  .overview.md
data/viking/viking/default/resources/context_8/: .abstract.md  .overview.md
data/viking/viking/default/user/default/memories/entities/: .abstract.md  (+2 more)
skills/ecommerce-schema/: SKILL.md  context.md  skill.yaml
tests/: test_agent.py
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
(+36 files in other folders)
